--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
   </div>
 
   <div style="margin-top: 20px; text-align: center; padding: 10px; background: var(--secondary-light); border-radius: 5px;">
-    <p><strong>Questions?</strong> WeChat me before class.</p>
+    <p><strong>Questions?</strong> @ heidi stokes UAL.</p>
   </div>
 
 </div>
